tests/fail/destruct_named_missing_field_fail.tk
shape Point(x: i32, y: i32)

fn main() -> i32 {
    auto p = Point(x = 10, y = 20)
    // Non-existent field z
    auto Point(a = .x, b = .z, ..) = p
    return 0
}
